CB-14359 Check for NPE candidates or other error cases if FQDN is null